--- a/src/Patient/ViewBooking.css
+++ b/src/Patient/ViewBooking.css
@@ -9,7 +9,7 @@
 /* Title styling */
 .booking-title {
   text-align: center;
-  color: #007bff;
+  color: #101111;
 }
 
 /* No bookings message */
@@ -34,7 +34,7 @@
 .table-header th {
   padding: 10px;
   border: 1px solid #ddd;
-  color: white;
+  color: rgb(10, 9, 9);
 }
 
 /* Table body row styling */
