--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 60vh;
   background: linear-gradient(rgba(0, 109, 119, 0.7), rgba(131, 56, 236, 0.7)),
-    url("https://cdn.builder.io/api/v1/image/assets/cf44c0ce78c240a28faac630188f1a27/d157cc29ecb3965c5db80004814b07466299e2bc976592dd7ad036ab9722bdb7?placeholderIfAbsent=true")
+    url("https://dm0qx8t0i9gc9.cloudfront.net/thumbnails/video/GTYSdDW/group-of-happy-doctors-meeting-at-hospital-office_vk3wwzkb_thumbnail-1080_01.png")
       center/cover no-repeat;
   display: flex;
   align-items: center;
