--- a/src/Admin/AllocateResources.css
+++ b/src/Admin/AllocateResources.css
@@ -32,7 +32,7 @@
 
 /* Section Titles */
  .Allocate h2, h3 {
-  color: #3b82f6; /* Blue Color */
+  color: #0d0d0e; /* Blue Color */
   font-weight: 600;
   margin-bottom: 1rem;
   text-align: center;
@@ -56,7 +56,7 @@ form button {
 }
 
 form button {
-  background-color: #3b82f6; /* Blue Color */
+  background-color: #080808; /* Blue Color */
   color: white;
   border: none;
   cursor: pointer;
@@ -82,7 +82,7 @@ table td {
 }
 
 table th {
-  background-color: #3b82f6; /* Blue Color */
+  background-color: #040404; /* Blue Color */
   color: white;
 }
 
