--- a/src/Admin/ManageStaff.css
+++ b/src/Admin/ManageStaff.css
@@ -9,7 +9,7 @@ body {
 
 h2 {
   text-align: center;
-  color: #3b82f6; /* Blue Color */
+  color: #0b0c0c; /* Blue Color */
   margin-bottom: 20px;
 }
 
@@ -31,7 +31,7 @@ h2 {
   display: block;
   margin: 0 auto 20px;
   padding: 10px 20px;
-  background-color: #3b82f6; /* Blue Color */
+  background-color: #0a0b0b; /* Blue Color */
   color: white;
   border: none;
   border-radius: 5px;
@@ -107,7 +107,7 @@ h2 {
 
 .staff-details h3 {
   margin: 0 0 10px;
-  color: #3b82f6; /* Blue Color */
+  color: #0d0d0f; /* Blue Color */
 }
 
 .staff-details p {
@@ -128,7 +128,7 @@ h2 {
 }
 
 .status-btn.active {
-  background-color: #3b82f6; /* Blue Color */
+  background-color: #0b0b0c; /* Blue Color */
   color: white;
 }
 
