--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -17,7 +17,7 @@ body, html {
 .contact-page h1 {
   text-align: center;
   font-size: 2.5rem;
-  color: #3b82f6; /* Blue color for the header */
+  color: #0d0e0e; /* Blue color for the header */
   margin-bottom: 20px;
 }
 
@@ -45,7 +45,7 @@ body, html {
 }
 
 .contact-info h2, .contact-form h2 {
-  color: #3b82f6; /* Blue color for subheadings */
+  color: #0a0a0b; /* Blue color for subheadings */
   margin-bottom: 15px;
 }
 
@@ -87,7 +87,7 @@ body, html {
   padding: 10px 20px;
   font-size: 1rem;
   color: white;
-  background-color: #3b82f6; /* Blue color for the submit button */
+  background-color: #0f0f0f; /* Blue color for the submit button */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -112,7 +112,7 @@ body, html {
 
 .why-contact-us h2 {
   text-align: center;
-  color: #3b82f6; /* Blue color for subheadings */
+  color: #1d1e1f; /* Blue color for subheadings */
   margin-bottom: 15px;
 }
 
